--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "framer-motion": "^12.23.11",
     "next": "15.4.2",
     "react": "19.1.0",
