--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev:staging": "dotenv -e .env.staging next dev --turbopack",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
